listview changing symbols (large images, small images, list), contextmenu only shown on click on calculating job (#585)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1628 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Server.Console/3.2/HiveServerManagementConsole.resx
+++ b/sources/HeuristicLab.Hive.Server.Console/3.2/HiveServerManagementConsole.resx
@@ -120,10 +120,10 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>32, 12</value>
   </metadata>
-  <metadata name="ilClientControl.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="ilLargeImgJob.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>129, 12</value>
   </metadata>
-  <data name="ilClientControl.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="ilLargeImgJob.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
@@ -230,10 +230,10 @@
         A5IB7RuSAe0BQgFNAT4HAAE+AwABKAMAAYADAAFAAwABAQEAAQEGAAEEFgAD//8A/wD/AP8ABQAL
 </value>
   </data>
-  <metadata name="ilJobControl.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>471, 13</value>
+  <metadata name="ilLargeImgClient.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>228, 11</value>
   </metadata>
-  <data name="ilJobControl.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="ilLargeImgClient.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
@@ -282,16 +282,92 @@
         BP8MAAs=
 </value>
   </data>
-  <metadata name="ilUserControl.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>231, 9</value>
+  <metadata name="timerSyncronize.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>341, 9</value>
   </metadata>
-  <data name="ilUserControl.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+  <metadata name="fileSystemWatcher1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>462, 9</value>
+  </metadata>
+  <metadata name="updaterWoker.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>388, 41</value>
+  </metadata>
+  <metadata name="contextMenuJob.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>252, 44</value>
+  </metadata>
+  <metadata name="ilSmallImgJob.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 50</value>
+  </metadata>
+  <data name="ilSmallImgJob.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACs
-        CwAAAk1TRnQBSQFMAwEBAAEEAQABBAEAASABAAEgAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
-        AYADAAEgAwABAQEAAQgGAAEQGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABy
+        DAAAAk1TRnQBSQFMAgEBBAEAAQUBAAEEAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ABQAFNQFW
+        AQcC8AG8AXgBVgQ1BSwBUgEHAvABvAF0AU0ELAVAAWkBBwLwAbwBbwVABpIBBwHwArwGkgQ1Ae8BvAHw
+        AfEC8AIHAVABLgI0BCwBmQG8AfAB8QLwAgcBbgIrASwEQAGTAbwB8AHxAvACBwFoAekBIAFABJIBBwG8
+        AfAB8QLwAgcB7AOSAzUBVgIHAbwB8AG8AQcB7wLtAzQDLAFTAgcBvAHwAbwBBwHvAe0BHAIrASwEQAIH
+        AbwB8AG8AQcB7wLtAiABQASSAgcBvAHwAbwBBwHvAe0B9wOSBDUBVgPvAewBbQHrAvcB7wI0BCwBTAEH
+        Au8B7AFtAesB9wEcAe8CLARAAUYD7wHsAW0B6wH3ARwB7wJABZID7wHsAW0B6wL3Ae8CkgU1ATQBUAHs
+        Ae0BBwG8AQcB9wEHAjUGLAFMAewB7QEHAbwBBwH3AQcCLAZAAUUB7AHtAQcBvAEHAfcBBwJAB5IB7AHt
+        AQcBvAEHAfcBBwKSATUBVgHsAfcCBwHvAewBFAFDAREBQwEUAbwBVgE1ASwBTAHsAe8CBwHvAewBFAFD
+        AREBQwEUAbwBUwEsAUABRgFuAfcCBwHvAewBFAFDAREBQwEUAbwBRgFAApIB7AH3AgcB7wHsARQBQwER
+        AUMBFAG8ApIBNQH3AewBFQIPARABEQEVARMDEgG8AVYBNQEsAfcB7AEVAg8BEAERARUBEwMSAbwBUgEs
+        AUAB9wHsARUCDwEQAREBFQETAxIBvAFGAUABkgH3AewBFQIPARABEQEVARMDEgG8ApIBNQHvAxEBEAER
+        AUMBEwJtAusBBwGXATUBLAHvAxEBEAERAUMBEwJtAusBBwF0ASwBQAHvAxEBEAERAUMBEwJtAusBBwFv
+        AUABkgHvAxEBEAERAUMBEwJtAusBBwHtAZIBNQHvARUBFAIRAkMBbQLsAu0BBwFzATUBLAHvARUBFAIR
+        AkMBbQLsAu0BBwEcASwBQAHvARUBFAIRAkMBbQLsAu0BBwFuAUABkgHvARUBFAIRAkMBbQLsAu0BBwHt
+        AZIBNQGYARQB6gIRAUMBFQHsAfcE7wHtATUBLAGZARQB6gIRAUMBFQHsAfcE7wEcASwBQAGTARQB6gIR
+        AUMBFQHsAfcE7wHtAUABkgHvARQB6gIRAUMBFQHsAfcE7wH3AZIBNQF4ARMBEgERAUMBFQEUAe8DBwG8
+        AQcBkgE1ASwBdAETARIBEQFDARUBFAHvAwcBvAEHARwBLAFAAW8BEwESAREBQwEVARQB7wMHAbwBBwGS
+        AUAB7QGSARMBEgERAUMBFQEUAe8DBwG8AQcB9wGSATUBVgESAkMBFQEUAeoD8ALxAQcB7wE1ASwBUwES
+        AkMBFQEUAeoD8ALxAQcB7wEsAUABRgESAkMBFQEUAeoD8ALxAQcB7wFAAe0BkgESAkMBFQEUAeoD8ALx
+        AQcB7wGSAjUBEgERAUMBFQEUAewD8gLzAfEBvAE1ASwBTQESAREBQwEVARQB7APyAvMB8QG8ASwCQAES
+        AREBQwEVARQB7APyAvMB8QG8AUACkgESAREBQwEVARQB7APyAvMB8QG8AZICNQHsAREBQwEVARQB7wHx
+        ArwCBwG8AfEBNQIsAewBEQFDARUBFAHvAfECvAIHAbwB8QFNAkAB7AERAUMBFQEUAe8B8QK8AgcBvAHx
+        AUACkgHsAREBQwEVARQB7wHxArwDBwHxAZICNQH3ARQBbQGSAQcBvAEIAZkBmAJ4AlYBNQIsAfcBFAFt
+        AZIBBwG8AQcBmQGTAXQBdQJTASwCQAH3ARQBbQGSAQcBvAEHApMBjgFvAkYBQAKSAfcBFAFtAZIBBwG8
+        AQgB9waSAjUDVgs1AiwDUwssAkACaQFGC0AQkgFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYA
+        AQEWAAP//wACAAs=
+</value>
+  </data>
+  <metadata name="ilSmallImgClient.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>137, 50</value>
+  </metadata>
+  <data name="ilSmallImgClient.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC0
+        BwAAAk1TRnQBSQFMAwEBAAEFAQABBAEAARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        AUADAAEQAwABAQEAAQgGAAEEGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
         AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
         AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
         AwABmQMAAcwCAAEzAwACMwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJmAgABZgGZ
@@ -318,40 +394,11 @@
         AQAB/wGZAf8BAAH/AcwCAAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEA
         AcwB/wFmAQAC/wGZAQAC/wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEA
         ASEBAAGlAQADXwEAA3cBAAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7
-        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8WAAWhewAFoXUAAqEBpwOG
-        BK0DhgGnA6FvAAGhAQQBtQcJArsBtQG0AYYCoW0AAaEBhgGLAbQCCQa7AbUCtAG1Aa0BBAGhbQABhgG0
-        AbsBtAEHAQkDuwEJA7sBtQK0AbMBBAGhYQAMoQGnArsBtAHvARkCuwMJArsBtQK0AbMBBAGhYQADoQGF
-        BwQBhQGGArsBtQEHAfMBCQG7BAkBuwK1AbQBiwGFAaFgAAKhAeoBbARtAUoB6wHsAW0BSgGRAbUCuwHv
-        AfMB3QG7BAkCuwG1AbQBhgKhYAABoQGGA3gDcwFyARwB7wFzAVABkQG0AQkBuwHvAfMBGQUJArsBtQG0
-        AYZiAAGhAesCeAFzAngBcwFyARwBBwEcAVEBcgG0AgkC7wEHArsDCQK7AbQBswGnYgABoQHsBngBcwHv
-        AbwBHAFzAVABcgG7ARkB9wNLAfcBuwEJA7sBswGFAaFiAAGhAa4BmQV4AZgBvAEIARwBeAFzAVABkQG7
-        Ae0BSwFKAUUBSwHtAbUBCQG1AbMBpwKhYwABrgGfAZgEeAGYAfEBBwGYAXgBcwFQAUoBiwHrAUsDRAFL
-        AZEBtAGGAqFlAAGnARwBmQR4ARwB7wEcAXIBUAJyAW0BEgFKAksCRAFLAYYBpwOhZQABoQGGARwBmAJ4
-        AXMCdAFzAeoBUAJyAW0FSwJKAadpAAKhAYsBmAF4AVABcwF0AnMBEgETAWYBhgHrBksB6gGnawABoQGn
-        AeoBSgNuAeoBZgEEAaEBpwHsA3MBbgJLAUoBp2sAAqEBEwFKAUsCdAFuAWYBFAGFAYYBcwN0AXMBbgJL
-        AWYBpwGhaQABoQFmAUoBSwF0ApMBdAFSAUoBZgGGAZIEdAFzAksBEwGGAaFpAAGGAXMBSwFRAZMDmQF0
-        AUsBZgGGARwCmQGTAnQBSwESAhQBoWkAAeoBdAFLAXQBmQGaA5kBSwKGAZkBmgKZAnQBSwIVARQBp2kA
-        AeoBdAFzAZkCGgGaAZkBHAHqAqcEmQGTAXQBbQIVARQBoWkAAYYBdAGTBBoBmgGZAWcBxAGhAe0BdAGT
-        AnQBbgESARQBFQFmAaFpAAGGAnQBGgLDARoBmgGZARICpwGuA+wB6wFtAeoBEwEUAYYBoWkAAacBdAFz
-        ARwBGgHDARoBmgGZAWcBxAGhAc8C7AHrAm0B6gIUAacBoWkAAacBrgEcAXQBcwFSAXQBkwFzARMBhgGh
-        AqcBhgKuAYYB6gGGAacCoWkAAaEBhgG8ApkBcwFRA0sBFAGFAaEDAAOhbQACoQG1AfADmQF5ARwBdAFt
-        AQQBoQMAA6FvAAGnAc8B7wKZARwBcwGuAad3AAGhB6cBofIAAUIBTQE+BwABPgMAASgDAAGAAwABIAMA
-        AQEBAAEBBgABAhYAA/8BAAL/AfgBPwwAAv8B+AE/DAAB/wH+DgAB/wH+DgAB/wH4DgAB/wH4DgABgA8A
-        AYAiAAEDDwABAw8AAQMPAAEDDAABgAIAAQ8MAAGAAgABDwwAAYACAAH/DAABgAIAAf8MAAHgAgAB/wwA
-        AeACAAE/DAAB4AIAAT8MAAHgAgABPwwAAeACAAE/DAAB4AIAAT8MAAHgAgABPwwAAeACAAE/DAAB4AIA
-        AT8MAAHgAgABPwwAAeABAAHjAf8MAAHgAQAB4wH/DAAB+AEDAv8MAAH4AQMC/wwABP8MAAs=
+        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/+GAAGhPwABJwGhPgABKAEn
+        AaE9AAJJAScBoTwAAUkBTwFJAScBoTsAAUkBcgFPAUkBJwGhOgABTwGXAXIBTwFJASgBoTkAAU8ClwFy
+        AUkBpzoAAVABlwEIAUkBpzsAAXIBCAFJAac8AAFyAUkBpz0AAXIBpz4AAad6AAFCAU0BPgcAAT4DAAEo
+        AwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAC/wYAAv8GAAH7Af8GAAH5Af8GAAH4Af8GAAH4AX8GAAH4
+        AT8GAAH4AR8GAAH4AQ8GAAH4AR8GAAH4AT8GAAH4AX8GAAH4Af8GAAH5Af8GAAH7Af8GAAL/BgAL
 </value>
   </data>
-  <metadata name="timerSyncronize.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>341, 9</value>
-  </metadata>
-  <metadata name="fileSystemWatcher1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>580, 13</value>
-  </metadata>
-  <metadata name="contextMenuJob.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>730, 13</value>
-  </metadata>
-  <metadata name="updaterWoker.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>862, 13</value>
-  </metadata>
 </root>
