#655 new logging mechanism added
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1930 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Console/3.2/HiveClientConsole.resx
+++ b/sources/HeuristicLab.Hive.Client.Console/3.2/HiveClientConsole.resx
@@ -124,58 +124,58 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABQ
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABS
         CgAAAk1TRnQBSQFMAgEBAgEAAQQBAAEEAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABECoAAUMCAQF0AWYCCQHxAyEB/wFiAgMB1AEgAgEBLCwAAUMCAQF0AWYCCQHx
-        AyEB/wFiAgMB1AEgAgEBLKQAAWACCgHyAZMBewEhAf8BvwGBASEB/wG9AYEBIQH/AboBgQEhAf8BuAGB
-        ASEB/wG2AYEBIQH/AVUBPgEhAf8BPQIBAWUcAAFgAgoB8gIhAaQB/wIhAdYB/wIhAdQB/wIhAdIB/wIh
-        AdAB/wIhAc4B/wIhAVwB/wE9AgEBZZgAASsBJwEhAf8BxwGBASEB/wHDAYEBIQH/AbEBgQEhAf8BsQGB
-        ASEB/wGxAYEBIQH/AbEBgQEhAf8BswGBASEB/wG2AYEBIQH/AbQBgQEhAf8BZAIFAeQUAAIhASwB/wIh
-        AdwB/wIhAdkB/wIhAcoB/wIhAcoB/wIhAcoB/wIhAcoB/wIhAcsB/wIhAc4B/wIhAcwB/wFkAgUB5JAA
-        AyEB/wHLAYEBIQH/AbsBgQEhAf8BtgGBASEB/wG2AYEBIQH/Ae4B3AHEBf8BvgGBAT4B/wG2AYEBIQH/
-        AbYBgQEhAf8BtgGBASEB/wG0AYEBIQH/AUkCAgGGDAADIQH/AiEB4AH/AiEB0gH/AiEBzgH/Ak4B1gH/
-        AiEBzgH/AiEBzgH/AiEBzgH/AiQBzgH/AiEBzgH/AiEBzgH/AiEBzAH/AUkCAgGGiAABLAIBAUIB0AGG
-        ASEB/wHHAYEBIQH/AboBgQEhAf8BugGBASEB/wG6AYEBIQH/AdABnAFyBf8BugGBASEB/wG6AYEBIQH/
-        AboBgQEhAf8BugGBASEB/wG2AYEBIQH/AXUBUAEhAf8IAAEsAgEBQgIhAeQB/wIhAdwB/wIhAdIB/wKf
-        Ae0F/wJnAd4B/wIhAdIB/wL0Af0F/wIkAdIB/wIhAdIB/wIhAc4B/wIhAYAB/4gAAyEB/wHSAYkBIQH/
-        Ab8BgQEhAf8BvwGBASEB/wG/AYEBIQH/Ab8BgQEhAf8B0wGfAXIF/wG/AYEBIQH/Ab8BgQEhAf8BvwGB
-        ASEB/wG/AYEBIQH/Ab4BgQEhAf8BtgGBASEB/wE2AgEBVwQAAyEB/wIhAeUB/wIhAdYB/wIhAdYN/wL1
-        Af0J/wLiAfoB/wIhAdYB/wIhAdUB/wIhAc4B/wE2AgEBV4QAAWkBUQEhAf8B1AGMASEB/wHEAYEBIQH/
-        AcQBgQEhAf8BxAGBASEB/wHEAYEBIQH/AdcBpAFzBf8BxAGBASEB/wHEAYEBIQH/AcQBgQEhAf8BxAGB
-        ASEB/wHEAYEBIQH/AbgBgQEhAf8BZQIHAewEAAIhAW8B/wIhAegB/wIhAdoB/wIhAdoB/wIhAdoR/wLi
-        AfoB/wIhAdoB/wIhAdoB/wIhAdoB/wIhAdAB/wFlAgcB7IQAAYEBZgEhAf8B1wGOASEB/wHJAYEBIQH/
-        AckBgQEhAf8ByQGBASEB/wHJAYEBIQn/AckBgQEhAf8ByQGBASEB/wHJAYEBIQH/AckBgQEhAf8ByQGB
-        ASEB/wG6AYEBIQH/AyEB/wQAAiEBgQH/AiEB6QH/AiEB3gH/AiEB3gH/AiEB3gH/AvQB/Q3/AmcB5wH/
-        AiEB3gH/AiEB3gH/AiEB3gH/AiEB0gH/AyEB/4QAAXkBVwEhAf8B2QGRASEB/wHOAYMBIQH/Ac4BgwEh
-        Af8BzgGDASEB/wHOAYMBIQH/Ac4BgwEhAf8B1wGcAVIB/wHOAYMBIQH/Ac4BgwEhAf8BzgGDASEB/wHO
-        AYMBIQH/Ac4BgwEhAf8BvQGBASEB/wFRAhMB+QQAASEBJgF4Af8CIQHsAf8CIQHiAf8CIQHiAf8C9AH9
-        Ff8CZwHqAf8CIQHiAf8CIQHiAf8CIQHUAf8BUQITAfmEAAEkASIBIQH/AdsBlAEhAf8B0gGJASEB/wHS
-        AYkBIQH/AdIBiQEhAf8B0gGJASEB/wHSAYkBIQH/AesBywGQAf8B0gGJASEB/wHSAYkBIQH/AdIBiQEh
-        Af8B0gGJASEB/wHEAYEBIQH/Ab8BgQEhAf8BUQICAZsEAAIhASQB/wIhAe0B/wIhAeYB/wIhAeUB/wL9
-        Af4F/wLiAfwB/wIhAeUJ/wKBAfEB/wIhAeUB/wIhAdoB/wIhAdYB/wFRAgIBm4QAAVgCAgGyAd4BmAEh
-        Af8B2wGUASEB/wHXAY4BIQH/AdcBjgEhAf8B1wGOASEB/wH7AfYB6wX/AdcBjgEhAf8B1wGOASEB/wHX
-        AY4BIQH/AdYBjQEhAf8BxAGBASEB/wGpAYEBIQH/CAABWAICAbIBIQErAe8B/wIhAe0B/wIhAekB/wIh
-        AekB/wLhAfwB/wIhAekB/wIhAekB/wIhAekB/wKBAfMB/wIhAekB/wIhAegB/wIhAdoB/wEhASkBnQH/
-        jAABWwFAASEB/wHdAZcBIQH/AdsBlAEhAf8B2wGUASEB/wHbAZQBIQH/AdsBlAEhAf8B3AGXAScB/wHb
-        AZQBIQH/AdsBlAEhAf8B1QGMASEB/wHJAYEBIQH/AdEBiAEhAf8BLAIhAfwMAAIhAVUB/wIhAe8B/wIh
-        Ae0B/wIhAe0B/wIhAe0B/wIhAe0B/wIhAe0B/wIhAe0B/wIhAe0B/wIhAegB/wIhAd4B/wEhATQB4gH/
-        ASwCIQH8jAABGQIBASEBkAF1ASEB/wHfAZkBIQH/AdsBlAEhAf8B2QGRASEB/wHYAZABIQH/AdgBkAEh
-        Af8B0wGKASEB/wHQAYYBIQH/Ac4BgwEhAf8B2gGSASEB/wEsAScBIQH/EAABGQIBAyEBhwH/ASEBJwHx
-        Af8CIQHtAf8CIQHsAf8CIQHrAf8CIQHrAf8CIQHmAf8CIQHkAf8CIQHiAf8BIQE+AeYB/wIhASsB/5QA
-        ARICAQEWAUYBOAEhAf8B0gGJASEB/wHiAZ0BIQH/AdkBkQEhAf8B1wGOASEB/wHVAYwBIQH/AeEBmwEh
-        Af8BzgGEASEB/wFBAiEB/hgAARICAQEWAiEBRQH/ASEBJwHTAf8BIQE4AfQB/wIhAewB/wIhAekB/wEh
-        ASIB6AH/ASEBQAHwAf8CIQHMAf8BQQIhAf6gAAFGAgEBfQMhAf8BcgFZASEB/wGBAXIBIQH/AVMBRAEh
-        Af8BQQIhAf4BFAIBARokAAFGAgEBfQMhAf8CIQF1Af8CIQGBAf8CIQFVAf8BQQIhAf4BFAIBARr/AJEA
-        AUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAH8AR8B/AEfBAAB8AEHAfABBwQA
-        AeABAwHgAQMEAAHAAQEBwAEBBAABgAEBAYABAQQAAYABAAGABQABgAEAAYAFAAGAAQABgAUAAYABAAGA
-        BQABgAEAAYAFAAGAAQEBgAEBBAABwAEBAcABAQQAAcABAwHAAQMEAAHgAQcB4AEHBAAB+AEPAfgBDwQA
-        BP8EAAs=
+        AwABEAMAAQEBAAEgBgABECoAAUMCAQF0AWYCCQHxAyQB/wFiAgMB1AEgAgEBLCwAAUMCAQF0AWYCCQHx
+        AyQB/wFiAgMB1AEgAgEBLKQAAWACCgHyAZMBfgEkAf8BvwGBASQB/wG9AYEBJAH/AboBgQEkAf8BuAGB
+        ASQB/wG2AYEBJAH/AVgBQQEkAf8BPQIBAWUcAAFgAgoB8gIkAaQB/wIkAdYB/wIkAdQB/wIkAdIB/wIk
+        AdAB/wIkAc4B/wIkAV8B/wE9AgEBZZgAAS4BKgEkAf8BxwGBASQB/wHDAYEBJAH/AbEBgQEkAf8BsQGB
+        ASQB/wGxAYEBJAH/AbEBgQEkAf8BswGBASQB/wG2AYEBJAH/AbQBgQEkAf8BZAIFAeQUAAIkAS8B/wIk
+        AdwB/wIkAdkB/wIkAcoB/wIkAcoB/wIkAcoB/wIkAcoB/wIkAcsB/wIkAc4B/wIkAcwB/wFkAgUB5JAA
+        AyQB/wHLAYEBJAH/AbsBgQEkAf8BtgGBASQB/wG2AYEBJAH/Ae4B3AHEBf8BvgGBAUEB/wG2AYEBJAH/
+        AbYBgQEkAf8BtgGBASQB/wG0AYEBJAH/AUkCAgGGDAADJAH/AiQB4AH/AiQB0gH/AiQBzgH/AlEB1gH/
+        AiQBzgH/AiQBzgH/AiQBzgH/AicBzgH/AiQBzgH/AiQBzgH/AiQBzAH/AUkCAgGGiAABLAIBAUIB0AGG
+        ASQB/wHHAYEBJAH/AboBgQEkAf8BugGBASQB/wG6AYEBJAH/AdABnAF1Bf8BugGBASQB/wG6AYEBJAH/
+        AboBgQEkAf8BugGBASQB/wG2AYEBJAH/AXgBUwEkAf8IAAEsAgEBQgIkAeQB/wIkAdwB/wIkAdIB/wKf
+        Ae0F/wJqAd4B/wIkAdIB/wL0Af0F/wInAdIB/wIkAdIB/wIkAc4B/wIkAYEB/4gAAyQB/wHSAYkBJAH/
+        Ab8BgQEkAf8BvwGBASQB/wG/AYEBJAH/Ab8BgQEkAf8B0wGfAXUF/wG/AYEBJAH/Ab8BgQEkAf8BvwGB
+        ASQB/wG/AYEBJAH/Ab4BgQEkAf8BtgGBASQB/wE2AgEBVwQAAyQB/wIkAeUB/wIkAdYB/wIkAdYN/wL1
+        Af0J/wLiAfoB/wIkAdYB/wIkAdUB/wIkAc4B/wE2AgEBV4QAAWwBVAEkAf8B1AGMASQB/wHEAYEBJAH/
+        AcQBgQEkAf8BxAGBASQB/wHEAYEBJAH/AdcBpAF2Bf8BxAGBASQB/wHEAYEBJAH/AcQBgQEkAf8BxAGB
+        ASQB/wHEAYEBJAH/AbgBgQEkAf8BZQIHAewEAAIkAXIB/wIkAegB/wIkAdoB/wIkAdoB/wIkAdoR/wLi
+        AfoB/wIkAdoB/wIkAdoB/wIkAdoB/wIkAdAB/wFlAgcB7IQAAYEBaQEkAf8B1wGOASQB/wHJAYEBJAH/
+        AckBgQEkAf8ByQGBASQB/wHJAYEBJAn/AckBgQEkAf8ByQGBASQB/wHJAYEBJAH/AckBgQEkAf8ByQGB
+        ASQB/wG6AYEBJAH/AyQB/wQAAiQBgQH/AiQB6QH/AiQB3gH/AiQB3gH/AiQB3gH/AvQB/Q3/AmoB5wH/
+        AiQB3gH/AiQB3gH/AiQB3gH/AiQB0gH/AyQB/4QAAXwBWgEkAf8B2QGRASQB/wHOAYMBJAH/Ac4BgwEk
+        Af8BzgGDASQB/wHOAYMBJAH/Ac4BgwEkAf8B1wGcAVUB/wHOAYMBJAH/Ac4BgwEkAf8BzgGDASQB/wHO
+        AYMBJAH/Ac4BgwEkAf8BvQGBASQB/wFUAhMB+QQAASQBKQF7Af8CJAHsAf8CJAHiAf8CJAHiAf8C9AH9
+        Ff8CagHqAf8CJAHiAf8CJAHiAf8CJAHUAf8BVAITAfmEAAEnASUBJAH/AdsBlAEkAf8B0gGJASQB/wHS
+        AYkBJAH/AdIBiQEkAf8B0gGJASQB/wHSAYkBJAH/AesBywGQAf8B0gGJASQB/wHSAYkBJAH/AdIBiQEk
+        Af8B0gGJASQB/wHEAYEBJAH/Ab8BgQEkAf8BUQICAZsEAAIkAScB/wIkAe0B/wIkAeYB/wIkAeUB/wL9
+        Af4F/wLiAfwB/wIkAeUJ/wKBAfEB/wIkAeUB/wIkAdoB/wIkAdYB/wFRAgIBm4QAAVgCAgGyAd4BmAEk
+        Af8B2wGUASQB/wHXAY4BJAH/AdcBjgEkAf8B1wGOASQB/wH7AfYB6wX/AdcBjgEkAf8B1wGOASQB/wHX
+        AY4BJAH/AdYBjQEkAf8BxAGBASQB/wGpAYEBJAH/CAABWAICAbIBJAEuAe8B/wIkAe0B/wIkAekB/wIk
+        AekB/wLhAfwB/wIkAekB/wIkAekB/wIkAekB/wKBAfMB/wIkAekB/wIkAegB/wIkAdoB/wEkASwBnQH/
+        jAABXgFDASQB/wHdAZcBJAH/AdsBlAEkAf8B2wGUASQB/wHbAZQBJAH/AdsBlAEkAf8B3AGXASoB/wHb
+        AZQBJAH/AdsBlAEkAf8B1QGMASQB/wHJAYEBJAH/AdEBiAEkAf8BLAIhAfwMAAIkAVgB/wIkAe8B/wIk
+        Ae0B/wIkAe0B/wIkAe0B/wIkAe0B/wIkAe0B/wIkAe0B/wIkAe0B/wIkAegB/wIkAd4B/wEkATcB4gH/
+        ASwCIQH8jAABGQIBASEBkAF4ASQB/wHfAZkBJAH/AdsBlAEkAf8B2QGRASQB/wHYAZABJAH/AdgBkAEk
+        Af8B0wGKASQB/wHQAYYBJAH/Ac4BgwEkAf8B2gGSASQB/wEvASoBJAH/EAABGQIBASECJAGHAf8BJAEq
+        AfEB/wIkAe0B/wIkAewB/wIkAesB/wIkAesB/wIkAeYB/wIkAeQB/wIkAeIB/wEkAUEB5gH/AiQBLgH/
+        lAABEgIBARYBSQE7ASQB/wHSAYkBJAH/AeIBnQEkAf8B2QGRASQB/wHXAY4BJAH/AdUBjAEkAf8B4QGb
+        ASQB/wHOAYQBJAH/AUQCJAH+GAABEgIBARYCJAFIAf8BJAEqAdMB/wEkATsB9AH/AiQB7AH/AiQB6QH/
+        ASQBJQHoAf8BJAFDAfAB/wIkAcwB/wFEAiQB/qAAAUYCAQF9AyQB/wF1AVwBJAH/AYEBdQEkAf8BVgFH
+        ASQB/wFEAiQB/gEUAgEBGiQAAUYCAQF9AyQB/wIkAXgB/wIkAYEB/wIkAVgB/wFEAiQB/gEUAgEBGv8A
+        kQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAfwBHwH8AR8EAAHwAQcB8AEH
+        BAAB4AEDAeABAwQAAcABAQHAAQEEAAGAAQEBgAEBBAABgAEAAYAFAAGAAQABgAUAAYABAAGABQABgAEA
+        AYAFAAGAAQABgAUAAYABAQGAAQEEAAHAAQEBwAEBBAABwAEDAcABAwQAAeABBwHgAQcEAAH4AQ8B+AEP
+        BAAE/wQACw==
 </value>
   </data>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>46</value>
-  </metadata>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>46</value>
   </metadata>
 </root>
