--- a/sources/HeuristicLab.ES/3.2/Properties/Resources.resx
+++ b/sources/HeuristicLab.ES/3.2/Properties/Resources.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,23 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>7, 3</value>
-  </metadata>
-  <data name="shakingFactorsUpperBoundTextBox.ToolTip" xml:space="preserve">
-    <value>Enter a pattern that is used to generate the initial strategy vector.
-This can be a single number, or a pattern of numbers which is used until the dimension is reached.
-Use the colon ; to separate two numbers.</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="OpenProblem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OpenProblem.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="shakingFactorsLowerBoundTextBox.ToolTip" xml:space="preserve">
-    <value>Enter a pattern that is used to generate the initial strategy vector.
-This can be a single number, or a pattern of numbers which is used until the dimension is reached.
-Use the colon ; to separate two numbers.</value>
-  </data>
-  <metadata name="openOperatorLibraryFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>97, 3</value>
-  </metadata>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>26</value>
-  </metadata>
 </root>
