changes in user interface (#663(
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2069 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Console/3.2/HiveClientConsole.resx
+++ b/sources/HeuristicLab.Hive.Client.Console/3.2/HiveClientConsole.resx
@@ -124,52 +124,52 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABS
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABQ
         CgAAAk1TRnQBSQFMAgEBAgEAAQQBAAEEAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABECoAAUMCAQF0AWYCCQHxAykB/wFiAgMB1AEgAgEBLCwAAUMCAQF0AWYCCQHx
-        AykB/wFiAgMB1AEgAgEBLKQAAWACCgHyAZMBgQEpAf8BvwGBASkB/wG9AYEBKQH/AboBgQEpAf8BuAGB
-        ASkB/wG2AYEBKQH/AV0BRgEpAf8BPQIBAWUcAAFgAgoB8gIpAaQB/wIpAdYB/wIpAdQB/wIpAdIB/wIp
-        AdAB/wIpAc4B/wIpAWQB/wE9AgEBZZgAATMBLwEpAf8BxwGBASkB/wHDAYEBKQH/AbEBgQEpAf8BsQGB
-        ASkB/wGxAYEBKQH/AbEBgQEpAf8BswGBASkB/wG2AYEBKQH/AbQBgQEpAf8BZAIFAeQUAAIpATQB/wIp
-        AdwB/wIpAdkB/wIpAcoB/wIpAcoB/wIpAcoB/wIpAcoB/wIpAcsB/wIpAc4B/wIpAcwB/wFkAgUB5JAA
-        AykB/wHLAYEBKQH/AbsBgQEpAf8BtgGBASkB/wG2AYEBKQH/Ae4B3AHEBf8BvgGBAUYB/wG2AYEBKQH/
-        AbYBgQEpAf8BtgGBASkB/wG0AYEBKQH/AUkCAgGGDAADKQH/AikB4AH/AikB0gH/AikBzgH/AlYB1gH/
-        AikBzgH/AikBzgH/AikBzgH/AiwBzgH/AikBzgH/AikBzgH/AikBzAH/AUkCAgGGiAABLAIBAUIB0AGG
-        ASkB/wHHAYEBKQH/AboBgQEpAf8BugGBASkB/wG6AYEBKQH/AdABnAF6Bf8BugGBASkB/wG6AYEBKQH/
-        AboBgQEpAf8BugGBASkB/wG2AYEBKQH/AX0BWAEpAf8IAAEsAgEBQgIpAeQB/wIpAdwB/wIpAdIB/wKf
-        Ae0F/wJvAd4B/wIpAdIB/wL0Af0F/wIsAdIB/wIpAdIB/wIpAc4B/wIpAYEB/4gAAykB/wHSAYkBKQH/
-        Ab8BgQEpAf8BvwGBASkB/wG/AYEBKQH/Ab8BgQEpAf8B0wGfAXoF/wG/AYEBKQH/Ab8BgQEpAf8BvwGB
-        ASkB/wG/AYEBKQH/Ab4BgQEpAf8BtgGBASkB/wE2AgEBVwQAAykB/wIpAeUB/wIpAdYB/wIpAdYN/wL1
-        Af0J/wLiAfoB/wIpAdYB/wIpAdUB/wIpAc4B/wE2AgEBV4QAAXEBWQEpAf8B1AGMASkB/wHEAYEBKQH/
-        AcQBgQEpAf8BxAGBASkB/wHEAYEBKQH/AdcBpAF7Bf8BxAGBASkB/wHEAYEBKQH/AcQBgQEpAf8BxAGB
-        ASkB/wHEAYEBKQH/AbgBgQEpAf8BZQIHAewEAAIpAXcB/wIpAegB/wIpAdoB/wIpAdoB/wIpAdoR/wLi
-        AfoB/wIpAdoB/wIpAdoB/wIpAdoB/wIpAdAB/wFlAgcB7IQAAYEBbgEpAf8B1wGOASkB/wHJAYEBKQH/
-        AckBgQEpAf8ByQGBASkB/wHJAYEBKQn/AckBgQEpAf8ByQGBASkB/wHJAYEBKQH/AckBgQEpAf8ByQGB
-        ASkB/wG6AYEBKQH/AykB/wQAAikBgQH/AikB6QH/AikB3gH/AikB3gH/AikB3gH/AvQB/Q3/Am8B5wH/
-        AikB3gH/AikB3gH/AikB3gH/AikB0gH/AykB/4QAAYEBXwEpAf8B2QGRASkB/wHOAYMBKQH/Ac4BgwEp
-        Af8BzgGDASkB/wHOAYMBKQH/Ac4BgwEpAf8B1wGcAVoB/wHOAYMBKQH/Ac4BgwEpAf8BzgGDASkB/wHO
-        AYMBKQH/Ac4BgwEpAf8BvQGBASkB/wFbAhMB+QQAASkBLgGAAf8CKQHsAf8CKQHiAf8CKQHiAf8C9AH9
-        Ff8CbwHqAf8CKQHiAf8CKQHiAf8CKQHUAf8BWwITAfmEAAEsASoBKQH/AdsBlAEpAf8B0gGJASkB/wHS
-        AYkBKQH/AdIBiQEpAf8B0gGJASkB/wHSAYkBKQH/AesBywGQAf8B0gGJASkB/wHSAYkBKQH/AdIBiQEp
-        Af8B0gGJASkB/wHEAYEBKQH/Ab8BgQEpAf8BUQICAZsEAAIpASwB/wIpAe0B/wIpAeYB/wIpAeUB/wL9
-        Af4F/wLiAfwB/wIpAeUJ/wKBAfEB/wIpAeUB/wIpAdoB/wIpAdYB/wFRAgIBm4QAAVgCAgGyAd4BmAEp
-        Af8B2wGUASkB/wHXAY4BKQH/AdcBjgEpAf8B1wGOASkB/wH7AfYB6wX/AdcBjgEpAf8B1wGOASkB/wHX
-        AY4BKQH/AdYBjQEpAf8BxAGBASkB/wGpAYEBKQH/CAABWAICAbIBKQEzAe8B/wIpAe0B/wIpAekB/wIp
-        AekB/wLhAfwB/wIpAekB/wIpAekB/wIpAekB/wKBAfMB/wIpAekB/wIpAegB/wIpAdoB/wEpATEBnQH/
-        jAABYwFIASkB/wHdAZcBKQH/AdsBlAEpAf8B2wGUASkB/wHbAZQBKQH/AdsBlAEpAf8B3AGXAS8B/wHb
-        AZQBKQH/AdsBlAEpAf8B1QGMASkB/wHJAYEBKQH/AdEBiAEpAf8BLAIhAfwMAAIpAV0B/wIpAe8B/wIp
-        Ae0B/wIpAe0B/wIpAe0B/wIpAe0B/wIpAe0B/wIpAe0B/wIpAe0B/wIpAegB/wIpAd4B/wEpATwB4gH/
-        ASwCIQH8jAABGQIBASEBkAF9ASkB/wHfAZkBKQH/AdsBlAEpAf8B2QGRASkB/wHYAZABKQH/AdgBkAEp
-        Af8B0wGKASkB/wHQAYYBKQH/Ac4BgwEpAf8B2gGSASkB/wE0AS8BKQH/EAABGQIBASECKQGHAf8BKQEv
-        AfEB/wIpAe0B/wIpAewB/wIpAesB/wIpAesB/wIpAeYB/wIpAeQB/wIpAeIB/wEpAUYB5gH/AikBMwH/
-        lAABEgIBARYBTgFAASkB/wHSAYkBKQH/AeIBnQEpAf8B2QGRASkB/wHXAY4BKQH/AdUBjAEpAf8B4QGb
-        ASkB/wHOAYQBKQH/AUkCKQH+GAABEgIBARYCKQFNAf8BKQEvAdMB/wEpAUAB9AH/AikB7AH/AikB6QH/
-        ASkBKgHoAf8BKQFIAfAB/wIpAcwB/wFJAikB/qAAAUYCAQF9AykB/wF6AWEBKQH/AYEBegEpAf8BWwFM
-        ASkB/wFJAikB/gEUAgEBGiQAAUYCAQF9AykB/wIpAX0B/wIpAYEB/wIpAV0B/wFJAikB/gEUAgEBGv8A
-        kQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAfwBHwH8AR8EAAHwAQcB8AEH
-        BAAB4AEDAeABAwQAAcABAQHAAQEEAAGAAQEBgAEBBAABgAEAAYAFAAGAAQABgAUAAYABAAGABQABgAEA
-        AYAFAAGAAQABgAUAAYABAQGAAQEEAAHAAQEBwAEBBAABwAEDAcABAwQAAeABBwHgAQcEAAH4AQ8B+AEP
-        BAAE/wQACw==
+        AwABEAMAAQEBAAEgBgABECoAAUMCAQF0AWYCCQHxAzAB/wFiAgMB1AEgAgEBLCwAAUMCAQF0AWYCCQHx
+        AzAB/wFiAgMB1AEgAgEBLKQAAWACCgHyAZMBgQEwAf8BvwGBATAB/wG9AYEBMAH/AboBgQEwAf8BuAGB
+        ATAB/wG2AYEBMAH/AWQBTQEwAf8BPQIBAWUcAAFgAgoB8gIwAaQB/wIwAdYB/wIwAdQB/wIwAdIB/wIw
+        AdAB/wIwAc4B/wIwAWsB/wE9AgEBZZgAAToBNgEwAf8BxwGBATAB/wHDAYEBMAH/AbEBgQEwAf8BsQGB
+        ATAB/wGxAYEBMAH/AbEBgQEwAf8BswGBATAB/wG2AYEBMAH/AbQBgQEwAf8BZAIFAeQUAAIwATsB/wIw
+        AdwB/wIwAdkB/wIwAcoB/wIwAcoB/wIwAcoB/wIwAcoB/wIwAcsB/wIwAc4B/wIwAcwB/wFkAgUB5JAA
+        AzAB/wHLAYEBMAH/AbsBgQEwAf8BtgGBATAB/wG2AYEBMAH/Ae4B3AHEBf8BvgGBAU0B/wG2AYEBMAH/
+        AbYBgQEwAf8BtgGBATAB/wG0AYEBMAH/AUkCAgGGDAADMAH/AjAB4AH/AjAB0gH/AjABzgH/Al0B1gH/
+        AjABzgH/AjABzgH/AjABzgH/AjMBzgH/AjABzgH/AjABzgH/AjABzAH/AUkCAgGGiAABLAIBAUIB0AGG
+        ATAB/wHHAYEBMAH/AboBgQEwAf8BugGBATAB/wG6AYEBMAH/AdABnAGBBf8BugGBATAB/wG6AYEBMAH/
+        AboBgQEwAf8BugGBATAB/wG2AYEBMAH/AYEBXwEwAf8IAAEsAgEBQgIwAeQB/wIwAdwB/wIwAdIB/wKf
+        Ae0F/wJ2Ad4B/wIwAdIB/wL0Af0F/wIzAdIB/wIwAdIB/wIwAc4B/wIwAYEB/4gAAzAB/wHSAYkBMAH/
+        Ab8BgQEwAf8BvwGBATAB/wG/AYEBMAH/Ab8BgQEwAf8B0wGfAYEF/wG/AYEBMAH/Ab8BgQEwAf8BvwGB
+        ATAB/wG/AYEBMAH/Ab4BgQEwAf8BtgGBATAB/wE2AgEBVwQAAzAB/wIwAeUB/wIwAdYB/wIwAdYN/wL1
+        Af0J/wLiAfoB/wIwAdYB/wIwAdUB/wIwAc4B/wE2AgEBV4QAAXgBYAEwAf8B1AGMATAB/wHEAYEBMAH/
+        AcQBgQEwAf8BxAGBATAB/wHEAYEBMAH/AdcBpAGBBf8BxAGBATAB/wHEAYEBMAH/AcQBgQEwAf8BxAGB
+        ATAB/wHEAYEBMAH/AbgBgQEwAf8BZQIHAewEAAIwAX4B/wIwAegB/wIwAdoB/wIwAdoB/wIwAdoR/wLi
+        AfoB/wIwAdoB/wIwAdoB/wIwAdoB/wIwAdAB/wFlAgcB7IQAAYEBdQEwAf8B1wGOATAB/wHJAYEBMAH/
+        AckBgQEwAf8ByQGBATAB/wHJAYEBMAn/AckBgQEwAf8ByQGBATAB/wHJAYEBMAH/AckBgQEwAf8ByQGB
+        ATAB/wG6AYEBMAH/AzAB/wQAAjABgQH/AjAB6QH/AjAB3gH/AjAB3gH/AjAB3gH/AvQB/Q3/AnYB5wH/
+        AjAB3gH/AjAB3gH/AjAB3gH/AjAB0gH/AzAB/4QAAYEBZgEwAf8B2QGRATAB/wHOAYMBMAH/Ac4BgwEw
+        Af8BzgGDATAB/wHOAYMBMAH/Ac4BgwEwAf8B1wGcAWEB/wHOAYMBMAH/Ac4BgwEwAf8BzgGDATAB/wHO
+        AYMBMAH/Ac4BgwEwAf8BvQGBATAB/wFiAhMB+QQAATABNQGBAf8CMAHsAf8CMAHiAf8CMAHiAf8C9AH9
+        Ff8CdgHqAf8CMAHiAf8CMAHiAf8CMAHUAf8BYgITAfmEAAEzATEBMAH/AdsBlAEwAf8B0gGJATAB/wHS
+        AYkBMAH/AdIBiQEwAf8B0gGJATAB/wHSAYkBMAH/AesBywGQAf8B0gGJATAB/wHSAYkBMAH/AdIBiQEw
+        Af8B0gGJATAB/wHEAYEBMAH/Ab8BgQEwAf8BUQICAZsEAAIwATMB/wIwAe0B/wIwAeYB/wIwAeUB/wL9
+        Af4F/wLiAfwB/wIwAeUJ/wKBAfEB/wIwAeUB/wIwAdoB/wIwAdYB/wFRAgIBm4QAAVgCAgGyAd4BmAEw
+        Af8B2wGUATAB/wHXAY4BMAH/AdcBjgEwAf8B1wGOATAB/wH7AfYB6wX/AdcBjgEwAf8B1wGOATAB/wHX
+        AY4BMAH/AdYBjQEwAf8BxAGBATAB/wGpAYEBMAH/CAABWAICAbIBMAE6Ae8B/wIwAe0B/wIwAekB/wIw
+        AekB/wLhAfwB/wIwAekB/wIwAekB/wIwAekB/wKBAfMB/wIwAekB/wIwAegB/wIwAdoB/wEwATgBnQH/
+        jAABagFPATAB/wHdAZcBMAH/AdsBlAEwAf8B2wGUATAB/wHbAZQBMAH/AdsBlAEwAf8B3AGXATYB/wHb
+        AZQBMAH/AdsBlAEwAf8B1QGMATAB/wHJAYEBMAH/AdEBiAEwAf8BLAIhAfwMAAIwAWQB/wIwAe8B/wIw
+        Ae0B/wIwAe0B/wIwAe0B/wIwAe0B/wIwAe0B/wIwAe0B/wIwAe0B/wIwAegB/wIwAd4B/wEwAUMB4gH/
+        ASwCIQH8jAABGQIBASEBkAGBATAB/wHfAZkBMAH/AdsBlAEwAf8B2QGRATAB/wHYAZABMAH/AdgBkAEw
+        Af8B0wGKATAB/wHQAYYBMAH/Ac4BgwEwAf8B2gGSATAB/wE7ATYBMAH/EAABGQIBASECMAGHAf8BMAE2
+        AfEB/wIwAe0B/wIwAewB/wIwAesB/wIwAesB/wIwAeYB/wIwAeQB/wIwAeIB/wEwAU0B5gH/AjABOgH/
+        lAABEgIBARYBVQFHATAB/wHSAYkBMAH/AeIBnQEwAf8B2QGRATAB/wHXAY4BMAH/AdUBjAEwAf8B4QGb
+        ATAB/wHOAYQBMAH/AVACMAH+GAABEgIBARYCMAFUAf8BMAE2AdMB/wEwAUcB9AH/AjAB7AH/AjAB6QH/
+        ATABMQHoAf8BMAFPAfAB/wIwAcwB/wFQAjAB/qAAAUYCAQF9AzAB/wGBAWgBMAH/AoEBMAH/AWIBUwEw
+        Af8BUAIwAf4BFAIBARokAAFGAgEBfQMwAf8CMAGBAf8CMAGBAf8CMAFkAf8BUAIwAf4BFAIBARr/AJEA
+        AUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAH8AR8B/AEfBAAB8AEHAfABBwQA
+        AeABAwHgAQMEAAHAAQEBwAEBBAABgAEBAYABAQQAAYABAAGABQABgAEAAYAFAAGAAQABgAUAAYABAAGA
+        BQABgAEAAYAFAAGAAQEBgAEBBAABwAEBAcABAQQAAcABAwHAAQMEAAHgAQcB4AEHBAAB+AEPAfgBDwQA
+        BP8EAAs=
 </value>
   </data>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
