--- a/sources/HeuristicLab.Common.Resources/3.2/Resources.resx
+++ b/sources/HeuristicLab.Common.Resources/3.2/Resources.resx
@@ -169,6 +169,9 @@
   <data name="RedoIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\RedoIcon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="RefreshDocument" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\RefreshDocument.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="SaveAllIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\SaveAllIcon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
